# kacemon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  model.rs
crates/core/src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs  temperature.rs
crates/core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  draw.rs  input.rs  lib.rs
crates/tui/src/ui/: colors.rs  help.rs  layout.rs  mod.rs  widgets.rs
srmon/: Cargo.toml
srmon/src/: main.rs
