[package]
name = "kacemon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sysinfo.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5.0"

# Platform-specific dependencies
procfs = { version = "0.16", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process"] }

[features]
default = []
linux_procfs = ["procfs"]
